trunk/test/test_bad/xt1s1.yang
submodule xt1s1 {
  belongs-to xt1;
  import xt3 { prefix xt3p; } // different prefix than in xt1
  organization "hopp";
  contact "hej" {
    xt3p:test hej {hemm he;}
    xt3:test hej {hemm he;} // error: bad prefix
  }
  revision 2007-06-06 { description "initinla"; }
}
  

